--- a/easybank-landing-page-master/main.css
+++ b/easybank-landing-page-master/main.css
@@ -43,11 +43,16 @@ nav {
   border: none;
 }
 
+#btn2 {
+  margin-top: 20px;
+}
+
 section {
   padding: 5% 10%;
 }
 
-#section1 {
+#section1,
+#section3 {
   background-color: hsl(0, 0%, 98%);
 }
 
@@ -60,12 +65,12 @@ section {
 }
 
 #next-generation {
-  width: 40%;
+  width: 45%;
 }
 
 #mobile-phones,
 #spots {
-  width: 40%;
+  width: 42%;
   position: absolute;
   top: 0;
   right: 0;
@@ -73,11 +78,15 @@ section {
 
 #spots {
   width: 55%;
-  top: -100px;
+  top: -120px;
 }
 
 #main-title {
-  font-size: 45px;
+  font-size: 50px;
+}
+
+.secondary-title {
+  font-size: 40px;
 }
 
 p {
@@ -85,12 +94,47 @@ p {
   line-height: 28px;
 }
 
+.p-section2 {
+  margin-right: 40px;
+}
+
+.p-section3 {
+  line-height: 20px;
+  font-size: 14px;
+}
+
 #choose-easybank {
   width: 60%;
 }
 
+.green-icon {
+  margin: 50px 0 20px 0;
+}
+
+.card {
+  width: 23%;
+  background-color: white;
+  border-radius: 5px;
+}
+
 .photo {
-  width: 20vw;
+  width: 100%;
+  height: 45%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+h6,
+.subtitle {
+  margin: 15px 0;
+}
+
+.subtitle {
+  font-size: 18px;
+}
+
+.card-text {
+  margin: 15px;
 }
 
 footer {
